[TKD-001] - Sonar improvements